# automatic-rigging-animation

./: .gitignore  CMakeLists.txt  Pinocchio.sln  README.md  main.cpp
AttachWeights/: AttachWeights.cpp  AttachWeights.vcproj  AttachWeights.vcxproj  AttachWeights.vcxproj.filters  Makefile  stdafx.h
Pinocchio/: Makefile  Pinocchio.cpp  Pinocchio.vcproj  Pinocchio.vcxproj  Pinocchio.vcxproj.filters  attachment.cpp  attachment.h  debugging.h  discretization.cpp  embedding.cpp  graphutils.h  hashutils.h  indexer.h  intersector.cpp  intersector.h  lsqSolver.cpp  mathutils.h  mesh.cpp  mesh.h  pinocchioApi.cpp  pinocchioApi.h  pointprojector.h  quaddisttree.h  refinement.cpp  skeleton.cpp  skeleton.h  transform.h  vector.h
Pinocchio/mesh/: fbx.h
PinocchioStatic/: PinocchioStatic.vcproj  PinocchioStatic.vcxproj  PinocchioStatic.vcxproj.filters
Project/: Makefile  Project.vcproj  Project.vcxproj  Project.vcxproj.filters  defmesh.cpp  defmesh.h  device.h  main.cpp  motion.cpp  motion.h  program.h  tools.h  window.cpp  window.h
Project/Shaders/skeleton/: skeleton_vs.glsl
Project/data/: joints.out  skeleton.out
blending/AttachWeights/: AttachWeights.cpp  Makefile
blending/Pinocchio/: Makefile  attachment.cpp  attachment.h  skeleton.cpp  skeleton.h  vector.h
blending/Project/: Makefile  MyWindow.cpp  MyWindow.h  defmesh.cpp  defmesh.h  main.cpp  motion.cpp  motion.h
shaders/skeleton/: skeleton_fs.glsl  skeleton_vs.glsl
src/: Device.h  Program.h  Renderer.h
